# bip-frost-dkg

./: .gitignore  README.md  all.sh  dkg.md  dkg.py  notes.md  parking.md  pyproject.toml  update-pydoc.sh
.github/workflows/: main.yml
images/: Makefile  chilldkg-sequence.txt  recpedpop-sequence.txt
python/: .ruff.toml  coverage.sh  example.py  mypy.ini  tests.py  tests.sh
python/chilldkg_ref/: __init__.py  chilldkg.py  encpedpop.py  simplpedpop.py  util.py  vss.py
python/gen_vector_utils/: coordinator.py  fixtures.py  participant.py  session.py  util.py
python/secp256k1lab/: CHANGELOG.md  ecdh.py  pyproject.toml  secp256k1.py
python/secp256k1lab/src/secp256k1lab/: secp256k1.py
python/secp256k1proto/: bip340.py  ecdh.py  secp256k1.py
python/secp256k1ref/: ecdh.py  secp256k1.py
python/vector_generator/: coordinator.py  generate_vectors.py  others.py  participant.py  util.py
python/vectors/: coordinator_finalize_vectors.json  coordinator_investigate_vectors.json  coordinator_step1_vectors.json  hostpubkey_gen_vectors.json  params_id_vectors.json  participant_finalize_vectors.json  participant_investigate_vectors.json  participant_step1_vectors.json  participant_step2_vectors.json  recover_vectors.json
reference/: .ruff.toml  chilldkg.py  crypto_bip340.py  crypto_extra.py  encpedpop.py  network.py  reference.py  reference_py_gen.sh  secp256k1.py  simplpedpop.py  tests.py  tests.sh  util.py  vss.py
reference/chilldkg_ref/: chilldkg.py  util.py
reference/secp256k1ref/: bip340.py  ecdh.py  keys.py  secp256k1.py
